# ripapidetail

./: .dockerignore  .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  README.md  demo.py  demo_gated_api.py  docker-compose.yml  env.example  pyproject.toml  requirements-streamlit.txt  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml  release.yml
.streamlit/: config.toml
src/app/: __init__.py  main.py
src/app/core/: __init__.py  advanced_extractor.py  api_analyzer.py  auto_github.py  extractor.py  gated_api_configs.py  github_integration.py  url_handler.py
src/app/utils/: __init__.py  config.py  logging.py  theme.py
tests/: __init__.py  test_extractor.py
